fixed spacing for news items

--- a/assets/css/dulcet.style.css
+++ b/assets/css/dulcet.style.css
@@ -9045,7 +9045,7 @@ ul.dropdown-menu li {
   text-align: left;
   display: block;
   overflow: hidden;
-  margin: 5px 0 0 10px;
+  margin: 5px 0 20px 10px;
   line-height: 1.1em;
   font-size: .9em; }
 
